# group_project_dataplatform

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: ea79237cf323_initial_schema_setup_for_silver_and_gold.py
data/processed/: cleaned_sensor_data.jsonl
data/raw/: raw_sensor_data.jsonl
docs/: CLI_commands.md  commands_to_sync_database.md  data_lineage_gold_layer.md  database_design.md  module_overview_CICD_github_actions.md  module_overview_api.md  module_overview_api_core.md  module_overview_bronze_layer.md  module_overview_db_revision.md  module_overview_orchestration.md  module_overview_producer_consumer.md  quick_run_commands.md  repo_structure_pathing_guide.md
docs/diagrams/: architecture_BRONZE.mmd  architecture_SILVER.mmd  architecture_flow.mmd  bronze_layer_CDM.mmd  bronze_layer_PDM.mmd
docs/modules/: module_overview_CICD_github_actions.md  module_overview_api.md  module_overview_bronze_layer.md  module_overview_database_architecture_design.md  module_overview_database_lineage.md  module_overview_db_migration_alembic.md  module_overview_infrastructure_orchestration.md
docs/sprint_1/: mall_för_grupp_6.docx
docs/stand_up/: standup_meeting.md
src/: pipeline_runner.py  pipeline_runner_cli.py
src/api/: database_connection_pool.py  main.py  models.py
src/config/: db_config.py
src/consumer/: worker.py
src/dashboard/: app.py  streamlit_tools.md
src/gold/: daily_aggregator.py  db_setup.py  db_setup_gold.py  etl_job_gold.py  gold_etl_job.py  (+1 more)
(+31 files in other folders)
