[project]
name = "group-project-dataplatform"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.1",
    "httpx>=0.28.1",
    "lxml>=6.0.2",
    "pandas>=3.0.1",
    "psycopg[binary]>=3.3.3",
    "pydantic-settings>=2.13.1",
    "sqlalchemy>=2.0.47",
    "uvicorn[standard]>=0.41.0",
]
