[project]
name = "group-project-dataplatform"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "confluent-kafka>=2.13.2",
    "dotenv>=0.9.9",
    "faker>=40.5.1",
    "fastapi>=0.135.1",
    "httpx>=0.28.1",
    "lxml>=6.0.2",
    "pandas>=3.0.1",
    "psycopg-pool>=3.3.0",
    "psycopg[binary]>=3.3.3",
    "pydantic-settings>=2.13.1",
    "sqlalchemy>=2.0.47",
    "uvicorn[standard]>=0.41.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.6"
]
